Add DataField model and field management

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,7 @@
                 <span class="text-gray-300">Admin</span>
                 <a href="{% url 'admin:index' %}" class="hover:underline">Django Admin</a>
                 <a href="{% url 'counter_definitions' %}" class="hover:underline">Counters</a>
+                <a href="{% url 'field_list' %}" class="hover:underline">Fields Manager</a>
             </nav>
         </div>
         {% endif %}
