--- a/council_finance/templates/council_finance/council_detail.html
+++ b/council_finance/templates/council_finance/council_detail.html
@@ -50,7 +50,7 @@ document.querySelectorAll('[data-duration]').forEach(el => {
 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 my-6">
     {% for fig in figures %}
     <div class="bg-blue-50 p-4 rounded shadow text-center">
-        <p class="text-sm text-gray-600">{{ fig.year.label }} - {{ fig.field_name|capfirst }}</p>
+        <p class="text-sm text-gray-600">{{ fig.year.label }} - {{ fig.field.name|capfirst }}</p>
         <p class="text-2xl font-bold">{{ fig.value }}</p>
     </div>
     {% endfor %}
